RESOLVED FIXED Bug 120107
[mips][arm EABI] Fix P_DFGOperation_EJS call in DFG.
https://bugs.webkit.org/show_bug.cgi?id=120107
Summary [mips][arm EABI] Fix P_DFGOperation_EJS call in DFG.
Julien Brianceau
Reported 2013-08-21 00:51:42 PDT
EncodedJSValue parameters must be aligned to even registers for MIPS and ARM EABI. This constraint is not followed in JITCompiler::Call callOperation(P_DFGOperation_EJS operation, GPRReg result, JSValueRegs value, size_t index) implementation.
Attachments
Fix P_DFGOperation_EJS call for MIPS and ARM EABI (1.38 KB, patch)
2013-08-21 00:57 PDT, Julien Brianceau
no flags
Fix P_DFGOperation_EJS call for MIPS and ARM EABI (with old fashion ChangeLog format) (1.39 KB, patch)
2013-08-22 00:43 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-08-21 00:57:47 PDT
Created attachment 209255 [details] Fix P_DFGOperation_EJS call for MIPS and ARM EABI Please note that I found this issue by reading the code, but I didn't have time to validate it on a MIPS or ARM environment.
Julien Brianceau
Comment 2 2013-08-22 00:43:42 PDT
Created attachment 209329 [details] Fix P_DFGOperation_EJS call for MIPS and ARM EABI (with old fashion ChangeLog format)
Yong Li
Comment 3 2013-08-22 05:14:47 PDT
Comment on attachment 209329 [details] Fix P_DFGOperation_EJS call for MIPS and ARM EABI (with old fashion ChangeLog format) looks good to me
WebKit Commit Bot
Comment 4 2013-08-22 05:36:51 PDT
Comment on attachment 209329 [details] Fix P_DFGOperation_EJS call for MIPS and ARM EABI (with old fashion ChangeLog format) Clearing flags on attachment: 209329 Committed r154442: <http://trac.webkit.org/changeset/154442>
WebKit Commit Bot
Comment 5 2013-08-22 05:36:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.